0.2505   2003-10-27

- The change in 0.2504 to accomodate SuSE's /etc/sysconfig/clock file
broke this feature on RedHat.  Sigh.  Reported by John Siracusa.


0.2504   2003-10-25

- If a timezone module cannot be loaded, give a more useful error
message if the failure is due to a syntax error in the module, as
opposed to the specified time zone not existing.  Based on a patch
from Alexey Mahotkin.

- Require Pod::Man 1.14+, so that head3/head4 markup doesn't cause
installation to die.

- SuSE puts TIMEZONE="Foo/Bar" in the /etc/sysconfig/clock file, but
DT::TZ::Local just looked for ZONE="...".  Reported by Pete.


0.2503   2003-10-06

- Made the offset string -> number conversion slightly less strict, so
that 1:00:00 is accepted, as opposed to required 01:00:00.  Without
colons, it still must be four or six digits, however.

- This release is based on the 2003d Olson database, which contains
updates for various zones.

- Fixed a bug in DateTime::TimeZone::OlsonDB for zones where an
observance change occurred at UTC year X, and a new rule started at
local year X + 1, but the offset meant that these were actually the
same year.  No zones in the previous release were affected, and this
bug was only uncovered by the new Olson data.

- Handle rule times of 24:00 in the Olson data.  Again, this was not
present in previous versions of the Olson data.


0.2502   2003-09-09

- Lots of fixes and improvements in how offsets are converted from
strings to numbers.  Also, a DT::TZ::OffsetOnly object now normalizes
its offset so that two offsets created from different strings, but
representing the same offset, now return the same value from the
name() method.  Patched by Joshua Hoblitt.

- More env vars and files are looked at when trying to determine what
the local time zone is.  Thanks to Date::Manip for this.

- Added SIGNATURE file to distribution.


0.2501   2003-08-10

- Fixed a test that failed because of a change in the DateTime.pm
from_object() API.


0.25     2003-07-20